refactor: replace JPA models with engine state representations